--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,7 +212,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 project.ext.vectoricons = [
-    iconFontNames: ['AntDesign.ttf' ] // Name of the font files you want to copy
+    iconFontNames: ['AntDesign.ttf', 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
