--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-autocomplete-input": "^4.1.0",
+    "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
