--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-navigation/drawer": "^5.4.0",
     "@react-navigation/native": "^5.1.4",
+    "axios": "^0.19.2",
+    "form-data": "^3.0.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-input": "^4.1.0",
+    "react-native-document-picker": "^3.3.3",
     "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
