--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-navigation/drawer": "^5.4.0",
     "@react-navigation/native": "^5.1.4",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "axios": "^0.19.2",
     "form-data": "^3.0.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-input": "^4.1.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^3.3.3",
     "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-elements": "^1.2.7",
@@ -27,6 +29,7 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.6.0",
+    "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
