--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-input": "^4.1.0",
+    "react-native-awesome-alerts": "^1.3.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^3.3.3",
     "react-native-dropdown-autocomplete": "^1.0.18",
