--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -194,6 +194,7 @@ dependencies {
     implementation 'com.facebook.fresco:webpsupport:2.0.0'
     compile project(':react-native-document-picker')
     compile project(':react-native-fs')
+    compile project(':realm')
 
     // For WebP support, without animations
     implementation 'com.facebook.fresco:webpsupport:2.0.0'
