--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/netinfo": "^5.9.10",
     "@react-navigation/drawer": "^5.4.0",
     "@react-navigation/native": "^5.1.4",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
@@ -37,6 +38,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
     "react-redux": "^7.2.0",
+    "realm": "^10.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
