--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "form-data": "^3.0.0",
     "react": "16.9.0",
+    "react-intl-universal": "^2.4.3",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-input": "^4.1.0",
@@ -28,6 +29,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.6.0",
@@ -37,6 +39,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
+    "react-number-format": "^4.4.4",
     "react-redux": "^7.2.0",
     "realm": "^10.1.3",
     "redux": "^4.0.5",
