--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-share": "^5.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
     "react-number-format": "^4.4.4",
